--- a/s3tbx-arc/pom.xml
+++ b/s3tbx-arc/pom.xml
@@ -18,8 +18,8 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.esa.s3tbx</groupId>
-        <artifactId>s3tbx</artifactId>
-        <version>2.0.2-SNAPSHOT</version>
+        <artifactId>s3tbx-arc-processor</artifactId>
+        <version>0.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>s3tbx-arc</artifactId>
